# Robot-Sorting

./: .gitmodules  README.md
devel/: .catkin  .rosinstall
devel/include/axif_tf/: getPoint.h
devel/include/dobot/: ClearAllAlarmsStateRequest.h  ClearAllAlarmsStateResponse.h  GetARCParamsRequest.h  GetARCParamsResponse.h  GetAlarmsStateRequest.h  GetAlarmsStateResponse.h  GetCPParamsRequest.h  GetCPParamsResponse.h  GetColorSensorRequest.h  GetColorSensorResponse.h  GetDeviceNameRequest.h  GetDeviceNameResponse.h  GetDeviceSNRequest.h  GetDeviceSNResponse.h  GetDeviceVersionRequest.h  GetDeviceVersionResponse.h  GetEndEffectorGripperRequest.h  GetEndEffectorGripperResponse.h  GetEndEffectorLaserRequest.h  GetEndEffectorLaserResponse.h  GetEndEffectorParamsRequest.h  GetEndEffectorParamsResponse.h  GetEndEffectorSuctionCupRequest.h  GetEndEffectorSuctionCupResponse.h  GetHOMEParamsRequest.h  GetHOMEParamsResponse.h  GetIOADCRequest.h  GetIOADCResponse.h  GetIODIRequest.h  GetIODIResponse.h  GetIODORequest.h  GetIODOResponse.h  GetIOMultiplexingRequest.h  GetIOMultiplexingResponse.h  GetIOPWMRequest.h  GetIOPWMResponse.h  GetInfraredSensorRequest.h  GetInfraredSensorResponse.h  GetJOGCommonParamsRequest.h  GetJOGCommonParamsResponse.h  (+80 more)
devel/include/opencvtest/: pixel_point0.h
devel/lib/axif_tf/: TFcamtorobot  getmarker  transform_base
devel/lib/dobot/: DobotClient_JOG  DobotClient_PTP
devel/lib/opencvtest/: savepic  sorting
devel/lib/pkgconfig/: axif_tf.pc  dobot.pc  opencvtest.pc  ros_test.pc  usb_cam.pc
devel/lib/python2.7/dist-packages/opencvtest/msg/: _pixel_point0.py
devel/lib/ros_test/: listener  talker
devel/lib/usb_cam/: usb_cam_node
devel/share/Project/cmake/: Project-msg-paths.cmake
devel/share/axif_tf/cmake/: axif_tf-msg-paths.cmake  axif_tfConfig.cmake
devel/share/dobot/cmake/: dobot-msg-extras.cmake  dobot-msg-paths.cmake  dobotConfig.cmake
devel/share/opencvtest/cmake/: opencvtest-msg-paths.cmake  opencvtestConfig.cmake
devel/share/ros_test/cmake/: ros_test-msg-paths.cmake  ros_testConfig.cmake
devel/share/roseus/ros/axif_tf/: manifest.l
devel/share/roseus/ros/dobot/: manifest.l
devel/share/roseus/ros/opencvtest/: manifest.l
devel/share/roseus/ros/ros_test/: manifest.l
devel/share/usb_cam/cmake/: usb_camConfig.cmake
src/axif_tf/: CMakeLists.txt
src/axif_tf/src/: TFcamtorobot.cpp  getmarker.cpp  transform_base.cpp
src/dobot/src/: DobotClient_PTP.cpp
src/opencvtest/: CMakeLists.txt
src/opencvtest/msg/: pixel_point0.msg
src/opencvtest/src/: savepic.cpp  sorting.cpp
src/ros_test/: CMakeLists.txt
src/ros_test/src/: .talker.cpp.swp  listener.cpp  talker.cpp
(+3 files in other folders)
